--- a/school.html
+++ b/school.html
@@ -33,15 +33,27 @@
     <div class="page-wrap">
       <header class="header">
         <div class="container">
-          <div class="grid-12 grid-sm-5 grid-md-5 header__leftside"><a href="/" class="header__logo"></a></div>
+          <div class="grid-12 grid-sm-5 grid-md-5 header__leftside"><a href="/" class="header__logo"><svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="-213.704 303.196 579.851 122.875"><g id="logo__badge">
+              <path fill="#D13239" d="M-172.263 426.07c-2.906 0-7.069-1.659-9.147-3.738l-28.561-28.476c-2.079-2.071-3.733-6.204-3.733-9.114v-40.21c0-2.915 1.655-7.052 3.733-9.131l28.561-28.467c2.079-2.079 6.242-3.738 9.147-3.738h40.341c2.915 0 7.069 1.659 9.147 3.738l28.561 28.467c2.083 2.078 3.746 6.221 3.746 9.131v40.211c0 2.906-1.663 7.043-3.746 9.114l-28.561 28.476c-2.079 2.079-6.233 3.738-9.147 3.738l-40.341-.001z"/>
+              <path fill="#fff" d="M-172.058 422.272c-2.226 0-5.258-1.247-6.934-2.902l-28.123-28.052c-1.529-1.525-2.776-4.561-2.776-6.779v-39.807c0-2.21 1.247-5.25 2.776-6.766l28.123-28.064c1.676-1.659 4.709-2.906 6.934-2.906h39.79c2.213 0 5.262 1.247 6.926 2.906l28.149 28.064c1.516 1.516 2.911 4.557 2.911 6.766v39.807c0 2.217-1.394 5.254-2.911 6.779l-28.149 28.052c-1.663 1.655-4.717 2.902-6.926 2.902h-39.79z"/>
+              <path fill="#D13239" d="M-170.803 415.917c-1.525 0-3.481-.831-4.578-1.798l-26.347-26.267c-1.109-1.092-1.945-3.171-1.945-4.687v-37.04c0-1.529.84-3.595 1.945-4.704l26.342-26.263c1.1-.966 3.054-1.798 4.578-1.798h37.292c1.512 0 3.603.835 4.57 1.798l26.338 26.263c1.113 1.109 1.941 3.175 1.941 4.704v37.04c0 1.516-.827 3.599-1.941 4.687l-26.338 26.271c-.966.961-3.058 1.798-4.57 1.798h-37.287v-.004z"/>
+              <path fill="#fff" d="M-174.687 384.127h-7.35v-5.108h-10.4v5.108h-6.787c-.978-1.104-.84-8.429-.425-11.058 1.113-9.95 11.096-26.12 17.61-28.741h7.35l.002 39.799zm-7.345-11.062v-18.648c-2.772 1.235-9.29 12.852-10.404 18.648h10.404zm36.875-28.737v39.799h-7.35v-6.363c0-3.859-1.39-7.186-2.629-10.227-1.113-3.037-3.746-8.984-7.765-12.436v29.026h-7.774v-39.799h7.774c4.431 2.898 9.563 9.396 10.395 11.197v-11.197h7.349zm4.44 0v39.799h7.337v-39.799h-7.337zm11.911 0v39.799h7.493v-21.979c4.709 0 8.724 8.152 9.282 10.92.555 2.764 1.668 6.225 1.668 11.058h6.653c0-7.464-.139-12.436-2.075-16.59-1.811-4.28-3.893-7.594-6.527-10.362 3.603-3.591 5.267-8.433 5.267-12.852h-7.06c-1.529 5.531-3.201 9.261-7.207 10.227v-10.227h-7.493l-.001.006z"/>
+              </g>
+              <g>
+              <path fill="#0055B8" d="M-67.475 330.121c-5.964 0-10.668 4.835-10.668 10.778v47.262c0 5.947 4.709 10.789 10.668 10.789h422.811c5.956 0 10.811-4.843 10.811-10.789v-47.258c0-5.943-4.856-10.778-10.811-10.778h-422.811v-.004z"/>
+              <path fill="#fff" d="M-67.475 331.503c-5.124 0-9.425 4.137-9.425 9.399v47.262c0 5.258 4.301 9.392 9.425 9.392h422.811c5.128 0 9.433-4.133 9.433-9.392v-47.262c0-5.258-4.305-9.399-9.433-9.399h-422.811z"/>
+              <path fill="#0055B8" d="M360.75 388.164c0 3.054-2.503 5.393-5.414 5.393h-422.811c-2.915 0-5.405-2.343-5.405-5.393v-47.262c0-3.045 2.49-5.388 5.405-5.388h422.811c2.911 0 5.414 2.343 5.414 5.388v47.262z"/>
+              <path fill="#fff" d="M-38.062 383.595h-7.35v-4.965h-10.383v4.965h-6.8c-.97-1.092-.827-8.425-.425-11.046 1.117-9.945 11.088-26.115 17.602-28.74h7.35v39.787h.006v-.001zm-7.351-11.046v-18.652c-2.772 1.239-9.29 12.856-10.383 18.652h10.383zm10.543 11.046v-39.79h14.137c4.448 0 6.943 4.427 7.212 5.527.42 1.243 1.247 7.043-.689 10.227 4.297 4.284 4.847 8.017 4.847 12.991 0 4.843-2.495 8.976-6.514 11.046-3.042-.001-18.993-.001-18.993-.001zm7.627-32.054v4.28h4.15c2.226 0 2.633-1.239 2.633-2.063 0-.831-.134-2.217-2.633-2.217h-4.15zm0 24.599h6.245c2.213 0 4.015-1.802 4.015-3.591 0-1.937.143-4.553-1.668-6.627-1.52-1.928-3.188-2.629-5.124-2.629h-3.465v12.848h-.004l.001-.001zm16.212-32.336v7.737h8.875v32.054h7.216v-32.054h9.014v-7.737h-25.105zm50.468 19.899c0 11.054-5.826 19.891-13.037 19.891-7.069 0-12.89-8.837-12.89-19.891 0-10.92 5.826-19.899 12.89-19.899 7.215 0 13.037 8.984 13.037 19.899zm-7.485.139c0-6.77-2.499-12.301-5.552-12.301-2.911 0-5.401 5.531-5.401 12.301 0 6.766 2.49 12.294 5.401 12.294 3.053.004 5.552-5.527 5.552-12.294zm9.37-20.038v19.484c0 6.351 4.574 20.303 13.033 20.303h20.647v-39.787h-7.887v32.332h-5.132v-32.332h-7.628v32.332c-5.544-5.657-5.821-11.323-5.821-15.057v-17.275h-7.212zm36.922 0v39.79h7.635v-21.966c4.561 0 8.589 8.156 9.14 10.92.689 2.772 1.663 6.225 1.663 11.046h6.653c0-7.455-.139-12.294-1.937-16.569-1.945-4.292-4.011-7.607-6.653-10.366 3.599-3.595 5.267-8.425 5.267-12.852h-7.073c-1.516 5.527-3.201 9.257-7.064 10.223v-10.223h-7.631v-.003zm51.295 19.899c0 11.054-5.826 19.891-12.886 19.891-7.212 0-13.037-8.837-13.037-19.891 0-10.92 5.826-19.899 13.037-19.899 7.06 0 12.886 8.984 12.886 19.899zm-7.485.139c0-6.77-2.503-12.301-5.405-12.301-3.054 0-5.544 5.531-5.544 12.301 0 6.766 2.495 12.294 5.544 12.294 2.906.004 5.405-5.527 5.405-12.294zm25.784 19.753h7.635v-39.79h-7.635c-7.761 5.393-13.574 14.368-15.111 19.484-1.525 5.119-3.759 12.713-2.083 20.303h7.081c-.559-6.204-.139-11.878 1.663-16.158 1.928-4.145 4.431-9.811 8.45-13.818v29.979zm35.356 0h-7.212v-4.965h-10.395v4.965h-6.8c-1.109-1.092-.827-8.425-.551-11.046 1.1-9.945 11.214-26.116 17.745-28.741h7.212v39.787h.001zm-7.211-11.046v-18.652c-2.911 1.239-9.425 12.856-10.395 18.652h10.395zm30.916-7.09l4.826 10.936h-6.497l-4.83-10.891 4.83-11.037h6.497l-4.826 10.992zm-9.391 0l4.834 10.936h-6.505l-4.843-10.891 4.843-11.037h6.505l-4.834 10.992zm42.655 18.136h-7.203v-4.965h-10.411v4.965h-6.783c-1.109-1.092-.827-8.425-.42-11.046 1.109-9.945 11.109-26.116 17.61-28.741h7.203v39.787h.004zm-7.199-11.046v-18.652c-2.911 1.239-9.277 12.856-10.411 18.652h10.411zm10.949-28.745v39.79h7.892v-21.134h10.408v21.134h7.623v-39.79h-7.623v12.021h-10.408v-12.021h-7.892zm29.245 0v39.79h7.359v-6.351c0-3.868 1.378-7.186 2.633-10.223 1.109-3.037 3.742-8.984 7.891-12.44v29.014h7.619v-39.79h-7.619c-4.57 2.898-9.706 9.392-10.526 11.193v-11.193h-7.357zm29.111 0v39.79h7.628v-21.966c4.578 0 8.589 8.156 9.156 10.92.551 2.772 1.642 6.225 1.642 11.046h6.67c0-7.455-.139-12.294-1.937-16.569-1.961-4.292-4.019-7.607-6.67-10.366 3.607-3.595 5.292-8.425 5.292-12.852h-7.094c-1.516 5.527-3.167 9.257-7.056 10.223v-10.223h-7.631v-.003zm32.839 21.655l-4.834 10.936h6.514l4.843-10.891-4.843-11.037h-6.514l4.834 10.992zm9.4 0l-4.83 10.936h6.506l4.838-10.891-4.838-11.037h-6.506l4.83 10.992z"/>
+              </g>
+              </svg></a></div>
           <div class="grid-12 grid-sm-5 push-sm-2 grid-md-7 push-md-0 header__rightside">
             <div class="header__contacts grid-sm-12 grid-md-5 hide-xs">
               <div class="header__contacts__phone"><i class="fa fa-mobile-phone phone-icon"></i><small>Единая справочная</small>
                 <h2>8 (423) 2-205-203</h2>
               </div>
-              <div class="header__contacts__links"><i class="fa fa-refresh"></i><a href="#">Заказать звонок</a><i class="fa fa-user"></i><a href="#">Кабинет</a></div>
+              <div class="header__contacts__links"><i class="fa fa-refresh"></i><a href="#callback-modal" class="modal-open">Заказать звонок</a><i class="fa fa-user inactive"></i><a href="#" class="inactive">Кабинет</a></div>
             </div>
-            <div class="grid-sm-12 grid-md-7"><a href="#" class="btn">ЗАПИСАТЬСЯ НА ОБУЧЕНИЕ</a></div>
+            <div class="grid-sm-12 grid-md-7"><a href="#signup-modal" class="modal-open btn">ЗАПИСАТЬСЯ НА ОБУЧЕНИЕ</a></div>
           </div>
         </div>
       </header>
@@ -152,6 +164,24 @@
           <div class="footer__developer"><i class="iastudio__logo"></i> Разработка сайта - <a href="http://iastudio.ru" target="_blank">Интерактив</a></div>
         </div>
       </footer>
+      <div id="signup-modal" class="modal mfp-hide">
+        <h3>Записаться на обучение</h3>
+        <form id="" method="" action="">
+          <input type="text" placeholder="Ваше имя">
+          <input type="tel" placeholder="Телефон">
+          <input type="text" placeholder="Категория">
+          <input type="text" placeholder="Район">
+          <textarea placeholder="Дополнительно"></textarea>
+          <input type="submit" value="Отправить заявку">
+        </form>
+      </div>
+      <div id="callback-modal" class="modal mfp-hide">
+        <h3>Заказать обратный звонок</h3>
+        <form id="" method="" action="">
+          <input type="tel" placeholder="Телефон">
+          <input type="submit" value="Отправить">
+        </form>
+      </div>
     </div>
     <!--[if (!IE)|(gt IE 8)]><!-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
@@ -165,6 +195,7 @@
     <script src="js/vendor/iscroll.js"></script>
     <script src="js/vendor/jquery.mousewheel-3.0.6.min.js"></script>
     <script src="js/vendor/jquery.mCustomScrollbar.min.js"></script>
+    <script src="js/vendor/jquery.magnific-popup.min.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
