--- a/calc.html
+++ b/calc.html
@@ -146,7 +146,9 @@
                 <label>Форма обучения:</label>
                 <select id="select-type">
                   <option value="0" selected disabled>Выбрать</option>
-                  <option value="1">Группа рабочего дня</option>
+                  <option value="1">Утренняя</option>
+                  <option value="1">Дневная</option>
+                  <option value="1">Вечерняя</option>
                   <option value="2">Группа выходного дня</option>
                 </select>
               </div>
